<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KotlinAndroidApp</string>
    <string name="action_weather_settings">Pogoda</string>
    <string name="action_localizations">Lokalizacja</string>
    <string name="action_refresh">Odśwież</string>
    <string name="coordinates">Coordinates:</string>
    <string name="sun">Słońce</string>
    <string name="moon">Księżyc</string>

    <string name="noWeatherInfo">Brak informacji o pogodzie!</string>
    <string name="updateData">Zaktualizowano dane!</string>


    <string name="location_latitude">Szerokość</string>
    <string name="location_longitude">Długość</string>
    <string name="location_locationName">Nazwa</string>
    <string name="location_temperature">Temperatura</string>
    <string name="location_pressure">Ciśnienie</string>
    <string name="location_description">Opis</string>

    <string name="wind_wind">Wiatr</string>
    <string name="wind_force">Siła</string>
    <string name="wind_direction">Kierunek</string>
    <string name="wind_other">Inne Dane</string>
    <string name="wind_humidity">Wilgotność</string>
    <string name="wind_visibility">Widoczność</string>

    <string name="settings_getLatitude">Szerokość geograficzna</string>
    <string name="settings_getLongitude">Długość geograficzna</string>
    <string name="settings_refreshing">Odświeżanie (w sekundach)</string>
    <string name="settings_dataRefreshing">Odświeżanie (w minutach)</string>
    <string name="settings_save">Zapisz</string>
    <string name="settings_refresh">Odśwież</string>
    <string name="settings_destroy">Przywróć Ustawienia Fabryczne</string>

    <string name="settings_astroTitle">Ustawienia dla Słońca i Księżyca</string>
    <string name="settings_weatherTitle">Ustawienia Lokacji</string>
    <string name="settings_dataTitle">Odświeżanie Danych</string>

    <string name="settings_cityName">Wybrane miasto</string>
    <string name="settings_cityLocation">Geolokalizacja</string>
    <string name="settings_unitType">Typ jednostek</string>
    <string name="settings_newLocation">Dodaj lokację</string>
    <string name="settings_allLocations">Lista lokacji</string>

    <string name="weatherFile">weather.bin</string>
    <string name="locationsFile">locations.bin</string>

    <string-array name="unitList">
        <item>Metryczny</item>
        <item>Imperialny</item>
    </string-array>
</resources>