<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

    <ScrollView
            android:id="@+id/weatherSettingsScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:weightSum="10">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/cityLocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="11dp"
                        android:text="@string/settings_weatherTitle"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/cityName"
                        android:layout_width="184dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="11dp"
                        android:text="@string/settings_cityName"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />

                <TextView
                        android:id="@+id/cityNameValue"
                        android:layout_width="184dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="11dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                <TextView
                        android:id="@+id/unitType"
                        android:layout_width="184dp"
                        android:layout_marginTop="11dp"
                        android:layout_height="match_parent"
                        android:text="@string/settings_unitType"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />

                <Spinner
                        android:id="@+id/unitTypeSpinner"
                        android:layout_marginTop="11dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/unitType"
                        android:layout_width="184dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="11dp"
                        android:text="@string/settings_allLocations"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />

                <Spinner
                        android:id="@+id/allLocationsSpinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:layout_weight="4"
                        android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                <TextView
                        android:id="@+id/newLocation"
                        android:layout_width="184dp"
                        android:layout_marginTop="11dp"
                        android:layout_height="match_parent"
                        android:text="@string/settings_newLocation"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />

                <AutoCompleteTextView
                        android:id="@+id/newLocationValue"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4" />

            </LinearLayout>

            <Button
                    android:id="@+id/refreshButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/white"
                    android:text="@string/settings_refresh" />

            <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/white"
                    android:text="@string/settings_save" />

            <Button
                    android:id="@+id/destroyButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/white"
                    android:text="@string/settings_destroy" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>