<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settingsScrollView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_dataTitle"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/dataRefreshing"
                        android:layout_width="184dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="11dp"
                        android:text="@string/settings_dataRefreshing"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />

                <EditText
                        android:id="@+id/dataRefreshingValue"
                        android:layout_width="183dp"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:inputType="number"
                        android:textColor="@android:color/white" />

            </LinearLayout>

            <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:text="@string/settings_save" />

    </ScrollView>

</RelativeLayout>