<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context=".fragment.LocationFragment"
              android:gravity="center_horizontal"
              android:id="@+id/locationFragmentLayout">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/locationScrollView"
            android:fillViewport="true">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:weightSum="1">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/locationName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/location_locationName"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/locationNameValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/locationLatitude"
                        android:layout_weight="1"
                        android:text="@string/location_latitude"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/locationLatitudeValue"
                        android:layout_weight="1"
                        android:gravity="right" />

            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/locationLongitude"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/location_longitude"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/locationLongitudeValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/locationTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/location_temperature"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/locationTemperatureValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/locationPressure"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/location_pressure"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/locationPressureValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/locationDescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/location_description"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/locationDescriptionValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <ImageView
                    android:id="@+id/imageWeather"
                    android:layout_height="match_parent"
                    android:layout_weight="1.34"
                    app:srcCompat="@mipmap/ic_launcher" android:layout_width="match_parent"/>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="115dp" android:paddingBottom="200dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>