<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context=".fragment.LocationFragment"
              android:gravity="center_horizontal"
              android:id="@+id/locationFragmentLayout">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/locationScrollView"
            android:fillViewport="true">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:weightSum="1">

            <TextView
                    android:id="@+id/windTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_wind"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/windForce"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/wind_force"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/windForceValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp">

                <TextView
                        android:id="@+id/windDirection"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/wind_direction"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/windDirectionValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/humidity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/wind_humidity"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/humidityValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>